# embedded-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt  main.c
src/: embedded_cli.c  embedded_cli.h
test/: CMakeLists.txt  test_embedded_cli.cpp
